<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_apps">Our Other Apps</string>
    <string name="action_settings">Settings</string>
    <string name="app_access_settings">APP ACCESS SETTINGS</string>
    <string name="app_download">To Download the app, visit http://appscreenrecorder.com/getapp</string>
    <string name="app_name">Screen Recorder</string>
    <string name="app_started">Use Notification buttons or floating button to capture screen</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="audio_already_continue">Continue</string>
    <string name="audio_already_used">Audio cannot be recorded as your mic is already being by some other application. Do you want to continue with recording Video only?</string>
    <string name="audio_msg_2">Internal audio recording is not supported by Android</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="audio_video_already_used">Your mic and front camera are already in use? Do you still want to continue recording without audio and front camera view?</string>
    <string name="background">Background</string>
    <string name="bit_rate">Bit Rate</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="by">By:</string>
    <string name="camera">Camera</string>
    <string name="camera_access_error">Cannot access the camera.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_upload">Cancel Upload</string>
    <string name="cant_access_play">Cannot Access Google Play Services,Please Try Again</string>
    <string name="change_account">Change account</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="color">Color</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compress_video">Compress Video while Sharing</string>
    <string name="compressing">Compressing</string>
    <string name="copy">Copy Link</string>
    <string name="count_down">Countdown Timer</string>
    <string name="count_down_desc">Recording will start after the countdown</string>
    <string name="crop">Crop</string>
    <string name="default_web_client_id">594740879768-6anvcq3td7vvf4eep0bfkihf2loisbi9.apps.googleusercontent.com</string>
    <string name="delete">Delete</string>
    <string name="draw_rewarded_ad_dialog_message">Draw your own notes on the screenshots. Unlock it feature by watching this video.</string>
    <string name="facebook">Facebook</string>
    <string name="feedback">Feedback</string>
    <string name="first_recording">No screen recording done. Do one now</string>
    <string name="frame_rate">Frame Rate</string>
    <string name="help_drawer">Help</string>
    <string name="id_dont_show_again">Don\'t show again</string>
    <string name="id_flip_horizontal_txt">Flip Horizontal</string>
    <string name="id_flip_vertical_txt">Flip Vertical</string>
    <string name="id_gallery_storage_permission_error_message">Storage access permission is needed to use this function.\10Please grant us Storage access permission and try again.</string>
    <string name="id_gallery_storage_permission_error_sub_message">Turn it on &gt;&gt;</string>
    <string name="id_loading_txt">Loading…</string>
    <string name="id_login_txt">Login</string>
    <string name="id_record_game_txt">Record Game</string>
    <string name="id_recordings_login_default_msg">Upload your screen recording talent videos to Youtube and get millions of views. Login now</string>
    <string name="id_start_now_txt">Start Now</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="lock_stop_desc">Stop recording when you lock the screen</string>
    <string name="lock_stop_title">Lock to stop recording</string>
    <string name="media_proj_msg">Screen Recorder will start capturing everything that\'s displayed on your screen.</string>
    <string name="ok">OK</string>
    <string name="orientation">Orientation</string>
    <string name="permission_msg">Once you see this dialog, please select the checkbox, as shown above and click START NOW to start the recording. This is an Android requirement to allow the app record your phone screen.</string>
    <string name="rate_us">Rate us</string>
    <string name="record_audio">Record Audio</string>
    <string name="recording_options_title">Recording Options</string>
    <string name="resolution">Resolution</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="screen_recording">Screen Recording</string>
    <string name="share">Share</string>
    <string name="show_touches">Show Touches</string>
    <string name="take_screen_shot">Take Screenshot</string>
    <string name="touch_settings">Touch Settings</string>
    <string name="txt_settings">Settings</string>
    <string name="video_settings">Video Settings</string>
    <string name="watch_now">Watch Now</string>
</resources>