<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.p003v7.widget.CardView
        android:id="@+id/id_remote_recordings_login_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.p003v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/id_recordings_login_default_msg"
                android:textColor="@android:color/black" />

            <android.support.p003v7.widget.AppCompatButton
                android:id="@+id/id_remote_recordings_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/id_login_txt"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </android.support.p003v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.p000v4.widget.SwipeRefreshLayout
            android:id="@+id/id_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.p003v7.widget.RecyclerView
                android:id="@+id/id_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="70dp" />
        </android.support.p000v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/id_empty_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_no_video_recorded"
            android:text="@string/first_recording"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/id_gallery_storage_permission_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_storage_permission_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/id_gallery_storage_permission_error_message"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/id_gallery_storage_permission_error_sub_message"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
